--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,10 @@
-/*@import './shared/colors';
-@import './shared/mixins';
-
+@import './shared/fonts';
 // PAGES
 @import './index';
+
+/*@import './shared/mixins';
+
+
 @import './portfolios';
 @import './blogs';
 @import './about';
@@ -12,48 +14,17 @@
 @import './header';
 @import './slate-editor';
 */
+
+
 html, body {
   height: 100%;
   width: 100%;
   font-family: 'Montserrat', 'Helvetica';
 }
 
-.clickable {
-  cursor: pointer;
-}
-
 .self-typed {
   font-size: 31px;
   font-weight: bold;
   letter-spacing: 2px;
-  color: white;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.error {
-  font-weight: 700;
-  color: red;
-}
-
-.base-page {
-  padding: 150px 0 100px 0;
-  color: black;
-  background-color: #ecedee;
-  min-height: 100vh;
-
-  .page-header {
-    .page-header-title {
-      font-weight: 700;
-      color: black;
-      display: inline-block;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-.abc {
-  color: blue;
+  color:white;
 }
