--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,9 @@
 // PAGES
 @import './_index';
 
+// COMPONENTS
+@import './header';
+
 /*@import './shared/mixins';
 
 
@@ -11,7 +14,7 @@
 @import './cv';
 
 // COMPONENTS
-@import './header';
+
 @import './slate-editor';
 */
 
