--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,6 +29,10 @@ html, body {
   position: absolute;
 }
 
+.clickable {
+  cursor: pointer !important;
+}
+
 .self-typed {
   font-size: 31px;
   font-weight: bold;
